k8s/k8sPodTemplate.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    some-label: jenkins-pipeline
    namespace: jenkins
spec:
  serviceAccountName: jenkins-agent # Enter the service account name being used
  securityContext:
    runAsUser: 0
    fsGroup: 0
    runAsNonRoot: false
  containers:
  - name: jenkins-agent
    image: 914401603085.dkr.ecr.us-east-1.amazonaws.com/test-jenkins-agent:latest # Enter the jenkins inbound agent image.
    command:
    - cat
    tty: true
    resources:
      requests:
        cpu: 100m
        memory: 256Mi
      limits:
        cpu: "1"
        memory: 1024Mi
