k8s/test-efs-pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-app
spec:
  containers:
  - name: app
    image: centos
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo $(date -u) >> /data-dir1/out.txt; sleep 5; done"]
    volumeMounts:
    - name: persistent-storage
      mountPath: /data-dir1
    - name: persistent-storage-2
      mountPath: /data-dir2
    resources:
      requests:
        cpu: 256m
        memory: 256Mi
      limits:
        cpu: "2"
        memory: 2048Mi
  volumes:
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: efs-claim
  - name: persistent-storage-2
    persistentVolumeClaim:
      claimName: efs-claim-2
