k8s/manifest.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: "jenkins"

---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: jenkins-manager
#   namespace: jenkins

---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: jenkins-agent
#   namespace: jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins-service
  annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     service.beta.kubernetes.io/aws-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: jenkins
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: manager
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: agent

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-manager
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
    spec:
      serviceAccountName: jenkins-manager # Enter the service account name being used
      securityContext:
        runAsUser: 0
        fsGroup: 0
        runAsNonRoot: false
      containers:
        - name: jenkins-manager
          image: 914401603085.dkr.ecr.us-east-1.amazonaws.com/jenkins-manager:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 4096Mi
          volumeMounts:
            - name: persistent-storage
              mountPath: /var/jenkins_home
          ports:
            - containerPort: 8080
              protocol: TCP
              name: manager
            - containerPort: 50000
              protocol: TCP
              name: jnlp
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim-jenkins
