k8s/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - jenkins.eks.ampnetworkoperations.com
    secretName: test-tls-prod
  rules:
  - host: jenkins.eks.ampnetworkoperations.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 80
